--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "rflashtext"]
+	path = rflashtext
+	url = https://github.com/abrja/rflashtext
+	shallow = true
+	registered = true
